# ai-subscription-ledger

./: .gitignore  LICENSE  README.md  context.txt  eslint.config.js  package-lock.json  package.json  启动订阅账本.sh
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  BillsView.tsx  CalendarPicker.tsx  CatalogModal.tsx  Dashboard.tsx  DueDatePickerModal.tsx  PendingView.tsx  SettingsModal.tsx  StatsView.tsx  SubTable.tsx  SubscriptionFormModal.tsx  i18n.ts  storage.ts  store.ts  styles.css  subTableHandlers.ts  useRenewReminders.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: db.rs  lib.rs  main.rs  ocr.rs
apps/desktop/src/ui/: Icon.tsx
apps/desktop/src/utils/: dateUtils.ts
apps/ios/: README.md
docs/: beta-survey-and-analytics.md  catalog.md  desktop-mac.md  ios-roadmap.md  macos-signing.md  product-mvp.md  product-report.md  product.md
scripts/: parity-html-core.mjs  sign-macos-app.sh
