[package]
name = "subscription-ledger"
version = "0.1.0"
description = "订阅账本 macOS 客户端"
authors = ["azhuilab"]
edition = "2021"

[lib]
name = "subscription_ledger_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
subtle = "2"
rand = "0.8"
security-framework = "3"
thiserror = "2"
tauri-plugin-clipboard-manager = "2.3.2"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
